--- a/angular.json
+++ b/angular.json
@@ -24,12 +24,12 @@
             ],
             "styles": [
               "src/styles.css",
-              "assets/css/bootstrap.min.css"
+              "../ClientesApp/node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
-              "assets/js/jquery-3.3.1.slim.min.js",
-              "assets/js/popper.min.js",
-              "assets/js/bootstrap.min.js"
+              "../ClientesApp/node_modules/jquery/dist/jquery.slim.min.js",
+              "../ClientesApp/node_modules/popper.js/dist/umd/popper.min.js",
+              "../ClientesApp/node_modules/bootstrap/dist/js/bootstrap.min.js"
             ],
             "es5BrowserSupport": true
           },
